[package]
name = "tun-tap"
# Also don't forget to update the version in the html_root_url attribute in src/lib.rs
version = "0.1.4"
edition = "2021"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "TUN/TAP interface wrapper"
documentation = "https://docs.rs/tun-tap"
repository = "https://github.com/vorner/tuntap"
readme = "README.md"
keywords = ["tun", "tap", "network"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/tuntap" }
maintenance = { status = "passively-maintained" }

[features]
default = ["tokio"]
tokio = ["futures", "libc", "tokio-util", "dep:tokio"]

[build-dependencies]
cc = "~1"

[dependencies]
futures = { version = "~0.3", default-features = false, optional = true }
libc = { version = "~0.2", optional = true }
tokio = { package = "tokio", version = "~1.29", features = ["io-util", "net"], optional = true }
tokio-util = {version = "~0.7", features = ["codec"], optional = true }

[dev-dependencies]
version-sync = "~0.9"
etherparse = "~0.13"
serial_test = "2"
tokio = { package = "tokio", version = "~1.29", features = ["full"] }
futures-util = "0.3.29"
bytes = "1.5.0"
tokio-util = {version = "~0.7", features = ["codec", "net"]}
